bace-of-the-project-added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="./style.css" />
-        <title>Step_project-Cards</title>
+        <title>StepProjectCards</title>
     </head>
     <body>
         <video autoplay muted loop id="myVideo">
