--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
             integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./styles/style.css" />
         <title>StepProjectCards</title>
+        <script type = "module" src="./scripts/index.js"></script>
+
     </head>
     <body>
         <video autoplay muted loop id="myVideo">
