api-login-added

--- a/index.html
+++ b/index.html
@@ -217,99 +217,27 @@
                             aria-label="Close"
                     ></button>
                 </div>
-                <div class="modal-body">
-                    <div class="input-group input-group-sm mb-3">
-                                <span
-                                        class="input-group-text"
-                                        id="inputGroup-sizing-sm"
-                                >name</span
-                                >
-                        <input
-                                type="text"
-                                class="form-control"
-                                aria-label="Sizing example input"
-                                aria-describedby="inputGroup-sizing-sm"
-                        />
+                    <div class="modal-body">
+                        <div class="input-group input-group-sm mb-3">
+                            <span class="input-group-text" id="inputGroup-sizing-sm">Email</span>
+                            <input
+                                    type="text"
+                                    class="form-control emailInp"
+                                    aria-label="Sizing example input"
+                                    aria-describedby="inputGroup-sizing-sm"
+                            />
+                        </div>
+                        <div class="input-group input-group-sm mb-3">
+                            <span class="input-group-text" id="inputGroup-sizing-sm">Password</span>
+                            <input
+                                    type="text"
+                                    class="form-control passwordInp"
+                                    aria-label="Sizing example input"
+                                    aria-describedby="inputGroup-sizing-sm"
+                            />
+                        </div>
+
                     </div>
-                    <div class="input-group input-group-sm mb-3">
-                                <span
-                                        class="input-group-text"
-                                        id="inputGroup-sizing-sm"
-                                >Last name</span
-                                >
-                        <input
-                                type="text"
-                                class="form-control"
-                                aria-label="Sizing example input"
-                                aria-describedby="inputGroup-sizing-sm"
-                        />
-                    </div>
-                    <div class="input-group input-group-sm mb-3">
-                                <span
-                                        class="input-group-text"
-                                        id="inputGroup-sizing-sm"
-                                >Address</span
-                                >
-                        <input
-                                type="text"
-                                class="form-control"
-                                aria-label="Sizing example input"
-                                aria-describedby="inputGroup-sizing-sm"
-                        />
-                    </div>
-                    <div class="input-group input-group-sm mb-3">
-                                <span
-                                        class="input-group-text"
-                                        id="inputGroup-sizing-sm"
-                                >Gender</span
-                                >
-                        <input
-                                type="text"
-                                class="form-control"
-                                aria-label="Sizing example input"
-                                aria-describedby="inputGroup-sizing-sm"
-                        />
-                    </div>
-                    <div class="input-group input-group-sm mb-3">
-                                <span
-                                        class="input-group-text"
-                                        id="inputGroup-sizing-sm"
-                                >zip</span
-                                >
-                        <input
-                                type="text"
-                                class="form-control"
-                                aria-label="Sizing example input"
-                                aria-describedby="inputGroup-sizing-sm"
-                        />
-                    </div>
-                    <div class="input-group input-group-sm mb-3">
-                                <span
-                                        class="input-group-text"
-                                        id="inputGroup-sizing-sm"
-                                >State</span
-                                >
-                        <input
-                                type="text"
-                                class="form-control"
-                                aria-label="Sizing example input"
-                                aria-describedby="inputGroup-sizing-sm"
-                        />
-                    </div>
-                    <div class="input-group input-group-sm mb-3">
-                                <span
-                                        class="input-group-text"
-                                        id="inputGroup-sizing-sm"
-                                >Last visit</span
-                                >
-                        <input
-                                type="text"
-                                class="form-control"
-                                aria-label="Sizing example input"
-                                aria-describedby="inputGroup-sizing-sm"
-                        />
-                    </div>
-                </div>
                 <div class="modal-footer">
                     <button
                             type="button"
@@ -318,8 +246,8 @@
                     >
                         Close
                     </button>
-                    <button type="button" class="btn btn-light">
-                        Save changes
+                    <button type="button" class="btn btn-light sign">
+                        Sign in
                     </button>
                 </div>
             </div>
