--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
             rel="stylesheet"
             integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
             crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./style.css"/>
-    <title>StepProjectCards</title>
-</head>
-<body>
-<video autoplay muted loop id="myVideo">
-    <source
-            src="./video/The Breathtaking Beauty of Nature _ HD.mp4"
-            type="video/mp4"
-    />
-</video>
+        />
+        <link rel="stylesheet" href="./styles/style.css" />
+        <title>StepProjectCards</title>
+        <script type = "module" src="./scripts/index.js"></script>
+
+    </head>
+    <body>
+        <video autoplay muted loop id="myVideo">
+            <source
+                src="./video/The Breathtaking Beauty of Nature _ HD.mp4"
+                type="video/mp4"
+            />
+        </video>
 
 <div class="container-fluid">
     <nav class="navbar bg">
@@ -255,79 +257,79 @@
     </div>
     <div class="container-sm center">
         <div class="row row-cols-1 row-cols-md-3 g-4 card-container">
-            <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                            This is a longer card with supporting text
-                        </p>
-<li></li>
-                        <button
-                                type="button"
-                                class="btn btn-outline-light"
-                        >
-                            Info
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                            This is a longer card with supporting text
-                            below as a natural lead-in to additional
-                            content. This content is a little bit
-                            longer.
-                        </p>
-                        <button
-                                type="button"
-                                class="btn btn-outline-light"
-                        >
-                            Info
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                            This is a longer card with supporting text
-                            below as a natural lead-in to additional
-                            content.
-                        </p>
-                        <button
-                                type="button"
-                                class="btn btn-outline-light"
-                        >
-                            Info
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                            This is a longer card with supporting text
-                            below as a natural lead-in to additional
-                            content. This content is a little bit
-                            longer.
-                        </p>
-                        <button
-                                type="button"
-                                class="btn btn-outline-light"
-                        >
-                            Info
-                        </button>
-                    </div>
-                </div>
-            </div>
+<!--            <div class="col">-->
+<!--                <div class="card">-->
+<!--                    <div class="card-body">-->
+<!--                        <h5 class="card-title">Card title</h5>-->
+<!--                        <p class="card-text">-->
+<!--                            This is a longer card with supporting text-->
+<!--                        </p>-->
+<!--<li></li>-->
+<!--                        <button-->
+<!--                                type="button"-->
+<!--                                class="btn btn-outline-light"-->
+<!--                        >-->
+<!--                            Info-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col">-->
+<!--                <div class="card">-->
+<!--                    <div class="card-body">-->
+<!--                        <h5 class="card-title">Card title</h5>-->
+<!--                        <p class="card-text">-->
+<!--                            This is a longer card with supporting text-->
+<!--                            below as a natural lead-in to additional-->
+<!--                            content. This content is a little bit-->
+<!--                            longer.-->
+<!--                        </p>-->
+<!--                        <button-->
+<!--                                type="button"-->
+<!--                                class="btn btn-outline-light"-->
+<!--                        >-->
+<!--                            Info-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col">-->
+<!--                <div class="card">-->
+<!--                    <div class="card-body">-->
+<!--                        <h5 class="card-title">Card title</h5>-->
+<!--                        <p class="card-text">-->
+<!--                            This is a longer card with supporting text-->
+<!--                            below as a natural lead-in to additional-->
+<!--                            content.-->
+<!--                        </p>-->
+<!--                        <button-->
+<!--                                type="button"-->
+<!--                                class="btn btn-outline-light"-->
+<!--                        >-->
+<!--                            Info-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col">-->
+<!--                <div class="card">-->
+<!--                    <div class="card-body">-->
+<!--                        <h5 class="card-title">Card title</h5>-->
+<!--                        <p class="card-text">-->
+<!--                            This is a longer card with supporting text-->
+<!--                            below as a natural lead-in to additional-->
+<!--                            content. This content is a little bit-->
+<!--                            longer.-->
+<!--                        </p>-->
+<!--                        <button-->
+<!--                                type="button"-->
+<!--                                class="btn btn-outline-light"-->
+<!--                        >-->
+<!--                            Info-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
