--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="./styles/style.css" />
+        <link rel="stylesheet" href="./style.css" />
         <title>StepProjectCards</title>
-        <script type = "module" src="./scripts/index.js"></script>
+<!--        <script type = "module" src="./scripts/index.js"></script>-->
 
     </head>
     <body>
