--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         />
         <link rel="stylesheet" href="./styles/style.css" />
         <title>StepProjectCards</title>
-<!--        <script type = "module" src="./scripts/index.js"></script>-->
 
     </head>
     <body>
@@ -339,6 +338,6 @@
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"
 ></script>
-<script type="module" src="./index.js"></script>
+<script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
