--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
     </head>
     <body>
-        <video autoplay muted loop id="myVideo">
+        <!-- <video autoplay muted loop id="myVideo">
             <source
                 src="./video/The Breathtaking Beauty of Nature _ HD.mp4"
                 type="video/mp4"
             />
-        </video>
+        </video> -->
 
 <div class="container-fluid">
     <nav class="navbar bg">
