add create button function

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="container-fluid">
     <nav class="navbar bg">
-        <div class="container-sm">
+        <div class="container-sm" id="navbar">
             <a class="navbar-brand">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 171.62791 34.88372">
                     <defs>
@@ -154,9 +154,10 @@
                     class="btn btn-outline-light back"
                     data-bs-toggle="modal"
                     data-bs-target="#exampleModal"
+                    id="button_login"                    
             >
                 Sign in
-            </button>
+            </button>       
         </div>
     </nav>
 </div>
