--- a/index.html
+++ b/index.html
@@ -333,6 +333,35 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Create card</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form>
+                  
+                  <select class="form-select select_doctor form-select-sm" aria-label=".form-select-sm">
+                        <option selected>select doctor</option>
+                        <option value="cardiologist">Cardiologist</option>
+                        <option value="dentist">Dentist</option>
+                        <option value="therapist">Therapist</option>
+                      </select>             
+                  <div class="d-flex form_footer">
+                        <button type="button" class="btn btn-secondary"
+                        data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-light btn-primary submit_btn">Submit</button>
+
+                  </div>
+                 
+                </form>
+          </div>          
+        </div>
+      </div>
+    </div>
+
 
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
