--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     </div>
 </div>
 <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
+      <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Create card</h5>
@@ -343,13 +343,13 @@
           <div class="modal-body">
             <form>
                   
-                  <select class="form-select select_doctor form-select-sm" aria-label=".form-select-sm">
+                  <select class="form-select  select_doctor form-select-lg" aria-label=".form-select-sm" size="1">
                         <option selected>select doctor</option>
                         <option value="cardiologist">Cardiologist</option>
                         <option value="dentist">Dentist</option>
                         <option value="therapist">Therapist</option>
                       </select>             
-                  <div class="d-flex form_footer">
+                  <div class="d-flex form_footer modal-footer">
                         <button type="button" class="btn btn-secondary"
                         data-bs-dismiss="modal">Cancel</button>
                         <button type="submit" class="btn btn-light btn-primary submit_btn">Submit</button>
