save changes create button

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     type="button"
                     class="btn btn-outline-light back"
                     data-bs-toggle="modal"
-                    data-bs-target="#exampleModal"
+                    data-bs-target="Modal1"
                     id="button_login"                    
             >
                 Sign in
@@ -198,7 +198,7 @@
         <!-- </div> -->
     </div>
 </div>
-<div class="container-md">
+<div class="container-md modal_wrapper">
     <div
             class="modal fade"
             id="exampleModal"
@@ -333,18 +333,18 @@
         </div>
     </div>
 </div>
-<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Create card</h5>
+<!-- <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true"> -->
+      <!-- <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered"> -->
+        <!-- <div class="modal-content"> -->
+          <!-- <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel2">Create card</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <form>
+          </div> -->
+          <!-- <div class="modal-body"> -->
+            <!-- <form >
                   
                   <select class="form-select  select_doctor form-select-lg" aria-label=".form-select-sm" size="1">
-                        <option selected>select doctor</option>
+                        <option selected autofocus>select doctor</option>
                         <option value="cardiologist">Cardiologist</option>
                         <option value="dentist">Dentist</option>
                         <option value="therapist">Therapist</option>
@@ -356,11 +356,11 @@
 
                   </div>
                  
-                </form>
-          </div>          
-        </div>
-      </div>
-    </div>
+                </form> -->
+          <!-- </div>           -->
+        <!-- </div> -->
+      <!-- </div> -->
+    <!-- </div> -->
 
 
 <script
