main-modal form-modal classes work version

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     type="button"
                     class="btn btn-outline-light back"
                     data-bs-toggle="modal"
-                    data-bs-target="Modal1"
+                    data-bs-target="#Modal1"
                     id="button_login"                    
             >
                 Sign in
@@ -198,10 +198,10 @@
         <!-- </div> -->
     </div>
 </div>
-<div class="container-md modal_wrapper">
+<div class="container-md  modal_wrapper" >
     <div
             class="modal fade"
-            id="exampleModal"
+            id="Modal1"
             tabindex="-1"
             aria-labelledby="exampleModalLabel"
             aria-hidden="true"
@@ -255,6 +255,7 @@
             </div>
         </div>
     </div>
+    
     <div class="container-sm center">
         <div class="row row-cols-1 row-cols-md-3 g-4 card-container">
 <!--            <div class="col">-->
@@ -333,6 +334,7 @@
         </div>
     </div>
 </div>
+<div class="container-md  modal_form_wrapper" ></div>
 <!-- <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true"> -->
       <!-- <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered"> -->
         <!-- <div class="modal-content"> -->
