--- a/index.html
+++ b/index.html
@@ -199,26 +199,26 @@
     </div>
 </div>
 <div class="container-md  modal_wrapper" >
-    <div
+    <!-- <div
             class="modal fade"
             id="Modal1"
             tabindex="-1"
             aria-labelledby="exampleModalLabel"
             aria-hidden="true"
-    >
-        <div class="modal-dialog modal-dialog-centered">
+    > -->
+        <!-- <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">
                         Modal title
-                    </h5>
-                    <button
+                    </h5> -->
+                    <!-- <button
                             type="button"
                             class="btn-close"
                             data-bs-dismiss="modal"
                             aria-label="Close"
-                    ></button>
-                </div>
+                    ></button> -->
+                <!-- </div>
                     <div class="modal-body">
                         <div class="input-group input-group-sm mb-3">
                             <span class="input-group-text" id="inputGroup-sizing-sm">Email</span>
@@ -227,9 +227,9 @@
                                     class="form-control emailInp"
                                     aria-label="Sizing example input"
                                     aria-describedby="inputGroup-sizing-sm"
-                            />
-                        </div>
-                        <div class="input-group input-group-sm mb-3">
+                            /> -->
+                        <!-- </div> -->
+                        <!-- <div class="input-group input-group-sm mb-3">
                             <span class="input-group-text" id="inputGroup-sizing-sm">Password</span>
                             <input
                                     type="text"
@@ -237,23 +237,23 @@
                                     aria-label="Sizing example input"
                                     aria-describedby="inputGroup-sizing-sm"
                             />
-                        </div>
+                        </div> -->
 
-                    </div>
-                <div class="modal-footer">
+                    <!-- </div> -->
+                <!-- <div class="modal-footer">
                     <button
                             type="button"
                             class="btn btn-secondary"
                             data-bs-dismiss="modal"
                     >
                         Close
-                    </button>
-                    <button type="button" data-bs-dismiss="modal" class="btn btn-light sign">
+                    </button> -->
+                    <!-- <button type="button" data-bs-dismiss="modal" class="btn btn-light sign">
                         Sign in
                     </button>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     
     <div class="container-sm center">
