--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
             rel="stylesheet"
             integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
             crossorigin="anonymous"
+        />
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.6.6/dragula.min.css"
     />
-    <link rel="stylesheet" href="./style.css"/>
-    <title>StepProjectCards</title>
-</head>
-<body>
-<video autoplay muted loop id="myVideo">
-    <source
-            src="./video/The Breathtaking Beauty of Nature _ HD.mp4"
-            type="video/mp4"
-    />
-</video>
+        <link rel="stylesheet" href="./styles/style.css" />
+        <title>StepProjectCards</title>
+
+    </head>
+    <body>
+        <video autoplay muted loop id="myVideo">
+            <source
+                src="./video/The Breathtaking Beauty of Nature _ HD.mp4"
+                type="video/mp4"
+            />
+        </video>
 
 <div class="container-fluid">
     <nav class="navbar bg">
@@ -151,6 +156,7 @@
             <button
                     type="button"
                     class="btn btn-outline-light back"
+                    id="signIn"
                     data-bs-toggle="modal"
                     data-bs-target="#exampleModal"
             >
@@ -167,13 +173,14 @@
                         class="form-control"
                         id="floatingInputGrid"
                         placeholder="Search by title or body text"
+                        value=""
                 />
             </div>
         </div>
         <div class="col-md">
             <div class="form-floating">
-                <select class="form-select" id="floatingSelectGrid">
-                    <option selected>Status</option>
+                <select class="form-select status" id="floatingSelectGrid">
+                    <option value="" selected>Status</option>
                     <option value="Open">Open</option>
                     <option value="Done">Done</option>
                 </select>
@@ -181,18 +188,32 @@
         </div>
         <div class="col-md">
             <div class="form-floating">
-                <select class="form-select" id="floatingSelectGrid">
-                    <option selected>Urgency</option>
+                <select class="form-select urgency" id="floatingSelectGrid">
+                    <option value="" selected>Urgency</option>
                     <option value="High">High</option>
                     <option value="Normal">Normal</option>
                     <option value="Low">Low</option>
                 </select>
             </div>
         </div>
+        <div class="col-md s">
+            <button
+                    type="button"
+                    class="btn btn-outline-light s search"
+            >
+                Search
+            </button>
+            <button
+                    type="button"
+                    class="col-sm btn btn-outline-light s reset"
+            >
+                Reset
+            </button>
+        </div>
         <!-- <div class=""> -->
-        <button type="button" class="col-sm btn btn-outline-light s">
-            Search
-        </button>
+<!--        <button type="button" class="col-sm btn btn-outline-light s">-->
+<!--            Search-->
+<!--        </button>-->
         <!-- </div> -->
     </div>
 </div>
@@ -255,88 +276,94 @@
     </div>
     <div class="container-sm center">
         <div class="row row-cols-1 row-cols-md-3 g-4 card-container">
-            <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                            This is a longer card with supporting text
-                        </p>
-<li></li>
-                        <button
-                                type="button"
-                                class="btn btn-outline-light"
-                        >
-                            Info
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                            This is a longer card with supporting text
-                            below as a natural lead-in to additional
-                            content. This content is a little bit
-                            longer.
-                        </p>
-                        <button
-                                type="button"
-                                class="btn btn-outline-light"
-                        >
-                            Info
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                            This is a longer card with supporting text
-                            below as a natural lead-in to additional
-                            content.
-                        </p>
-                        <button
-                                type="button"
-                                class="btn btn-outline-light"
-                        >
-                            Info
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                            This is a longer card with supporting text
-                            below as a natural lead-in to additional
-                            content. This content is a little bit
-                            longer.
-                        </p>
-                        <button
-                                type="button"
-                                class="btn btn-outline-light"
-                        >
-                            Info
-                        </button>
-                    </div>
-                </div>
-            </div>
+            <div class="container">
+                <div class="animate one">
+                    <span>N</span><span>o</span>&nbsp;<span>c</span><span>a</span><span>r</span><span>d</span><span>s</span>&nbsp;<span>t
+                </span><span>o</span>&nbsp;<span>s</span><span>h</span><span>o
+                </span><span>w
+                </span><span>!</span>
+<!--            <div class="col">-->
+<!--                <div class="card">-->
+<!--                    <div class="card-body">-->
+<!--                        <h5 class="card-title">Card title</h5>-->
+<!--                        <p class="card-text">-->
+<!--                            This is a longer card with supporting text-->
+<!--                        </p>-->
+<!--<li></li>-->
+<!--                        <button-->
+<!--                                type="button"-->
+<!--                                class="btn btn-outline-light"-->
+<!--                        >-->
+<!--                            Info-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col">-->
+<!--                <div class="card">-->
+<!--                    <div class="card-body">-->
+<!--                        <h5 class="card-title">Card title</h5>-->
+<!--                        <p class="card-text">-->
+<!--                            This is a longer card with supporting text-->
+<!--                            below as a natural lead-in to additional-->
+<!--                            content. This content is a little bit-->
+<!--                            longer.-->
+<!--                        </p>-->
+<!--                        <button-->
+<!--                                type="button"-->
+<!--                                class="btn btn-outline-light"-->
+<!--                        >-->
+<!--                            Info-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col">-->
+<!--                <div class="card">-->
+<!--                    <div class="card-body">-->
+<!--                        <h5 class="card-title">Card title</h5>-->
+<!--                        <p class="card-text">-->
+<!--                            This is a longer card with supporting text-->
+<!--                            below as a natural lead-in to additional-->
+<!--                            content.-->
+<!--                        </p>-->
+<!--                        <button-->
+<!--                                type="button"-->
+<!--                                class="btn btn-outline-light"-->
+<!--                        >-->
+<!--                            Info-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col">-->
+<!--                <div class="card">-->
+<!--                    <div class="card-body">-->
+<!--                        <h5 class="card-title">Card title</h5>-->
+<!--                        <p class="card-text">-->
+<!--                            This is a longer card with supporting text-->
+<!--                            below as a natural lead-in to additional-->
+<!--                            content. This content is a little bit-->
+<!--                            longer.-->
+<!--                        </p>-->
+<!--                        <button-->
+<!--                                type="button"-->
+<!--                                class="btn btn-outline-light"-->
+<!--                        >-->
+<!--                            Info-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.6.6/dragula.min.js"></script>
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"
 ></script>
-<script type="module" src="./index.js"></script>
+<script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
