rustam_branch-merged

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             <button
                     type="button"
                     class="btn btn-outline-light back"
+                    id="signIn"
                     data-bs-toggle="modal"
                     data-bs-target="#exampleModal"
             >
