lena_branch-merged

--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
 <!--                            Info-->
 <!--                        </button>-->
 <!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
+                </div>
+            </div>
         </div>
     </div>
 </div>
