add code in modal.js, rename modal.js to select_modal, create function createInput, add createInput to instance function

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
             </div>
         </div>
     </div>
+    <div class="container-md modal_form_wrapper"></div>
     <div class="container-sm center">
         <div class="row row-cols-1 row-cols-md-3 g-4 card-container">
             <div class="container">
